--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+
+body{
+    height: 100vh;
+    margin: 0;
+    background: linear-gradient(135deg, rgb(54, 52, 85), rgb(17, 24, 40));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
